# serializer version: 1
# name: test_entry_diagnostics
  dict({
    'data': dict({
      'controller_diagnostics': dict({
        'bootCompleted': True,
        'cloudStatus': 0,
        'cpuUsage': 1,
        'gatewayAddress': '172.16.20.1',
        'hasWifi': True,
        'internetStatus': True,
        'lastCheck': '2022-08-07 11:59:35',
        'lastCheckTimestamp': 1659895175,
        'locationStatus': True,
        'memUsage': 16196,
        'networkStatus': True,
        'softwareVersion': '4.0.1144',
        'standaloneMode': False,
        'timeStatus': True,
        'uptime': '3 days, 18:14:14',
        'uptimeSeconds': 324854,
        'weatherStatus': True,
        'wifiMode': None,
        'wizardHasRun': True,
      }),
      'coordinator': dict({
        'api.versions': dict({
          'apiVer': '4.6.1',
          'hwVer': '3',
          'swVer': '4.0.1144',
        }),
        'machine.firmware_update_status': dict({
          'lastUpdateCheck': '2022-07-14 13:01:28',
          'lastUpdateCheckTimestamp': 1657825288,
          'packageDetails': list([
          ]),
          'update': False,
          'updateStatus': 1,
        }),
        'programs': dict({
          '1': dict({
            'active': True,
            'coef': 0,
            'cs_on': False,
            'cycles': 0,
            'delay': 0,
            'delay_on': False,
            'endDate': None,
            'freq_modified': 0,
            'frequency': dict({
              'param': '0',
              'type': 0,
            }),
            'futureField1': 0,
            'ignoreInternetWeather': False,
            'name': 'Morning',
            'nextRun': '2018-06-04',
            'simulationExpired': False,
            'soak': 0,
            'startDate': '2018-04-28',
            'startTime': '06:00',
            'startTimeParams': dict({
              'offsetMinutes': 0,
              'offsetSign': 0,
              'type': 0,
            }),
            'status': 0,
            'uid': 1,
            'useWaterSense': False,
            'wateringTimes': list([
              dict({
                'active': True,
                'duration': 0,
                'id': 1,
                'minRuntimeCoef': 1,
                'name': 'Landscaping',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': True,
                'duration': 0,
                'id': 2,
                'minRuntimeCoef': 1,
                'name': 'Flower Box',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 3,
                'minRuntimeCoef': 1,
                'name': 'TEST',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 4,
                'minRuntimeCoef': 1,
                'name': 'Zone 4',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 5,
                'minRuntimeCoef': 1,
                'name': 'Zone 5',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 6,
                'minRuntimeCoef': 1,
                'name': 'Zone 6',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 7,
                'minRuntimeCoef': 1,
                'name': 'Zone 7',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 8,
                'minRuntimeCoef': 1,
                'name': 'Zone 8',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 9,
                'minRuntimeCoef': 1,
                'name': 'Zone 9',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 10,
                'minRuntimeCoef': 1,
                'name': 'Zone 10',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 11,
                'minRuntimeCoef': 1,
                'name': 'Zone 11',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 12,
                'minRuntimeCoef': 1,
                'name': 'Zone 12',
                'order': -1,
                'userPercentage': 1,
              }),
            ]),
            'yearlyRecurring': True,
          }),
          '2': dict({
            'active': False,
            'coef': 0,
            'cs_on': False,
            'cycles': 0,
            'delay': 0,
            'delay_on': False,
            'endDate': None,
            'freq_modified': 0,
            'frequency': dict({
              'param': '0',
              'type': 0,
            }),
            'futureField1': 0,
            'ignoreInternetWeather': False,
            'name': 'Evening',
            'nextRun': '2018-06-04',
            'simulationExpired': False,
            'soak': 0,
            'startDate': '2018-04-28',
            'startTime': '06:00',
            'startTimeParams': dict({
              'offsetMinutes': 0,
              'offsetSign': 0,
              'type': 0,
            }),
            'status': 0,
            'uid': 2,
            'useWaterSense': False,
            'wateringTimes': list([
              dict({
                'active': True,
                'duration': 0,
                'id': 1,
                'minRuntimeCoef': 1,
                'name': 'Landscaping',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': True,
                'duration': 0,
                'id': 2,
                'minRuntimeCoef': 1,
                'name': 'Flower Box',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 3,
                'minRuntimeCoef': 1,
                'name': 'TEST',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 4,
                'minRuntimeCoef': 1,
                'name': 'Zone 4',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 5,
                'minRuntimeCoef': 1,
                'name': 'Zone 5',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 6,
                'minRuntimeCoef': 1,
                'name': 'Zone 6',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 7,
                'minRuntimeCoef': 1,
                'name': 'Zone 7',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 8,
                'minRuntimeCoef': 1,
                'name': 'Zone 8',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 9,
                'minRuntimeCoef': 1,
                'name': 'Zone 9',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 10,
                'minRuntimeCoef': 1,
                'name': 'Zone 10',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 11,
                'minRuntimeCoef': 1,
                'name': 'Zone 11',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 12,
                'minRuntimeCoef': 1,
                'name': 'Zone 12',
                'order': -1,
                'userPercentage': 1,
              }),
            ]),
            'yearlyRecurring': True,
          }),
        }),
        'provision.settings': dict({
          'location': dict({
            'address': 'Default',
            'doyDownloaded': True,
            'elevation': '**REDACTED**',
            'et0Average': 6.578,
            'krs': 0.16,
            'latitude': '**REDACTED**',
            'longitude': '**REDACTED**',
            'name': 'Home',
            'rainSensitivity': 0.8,
            'state': 'Default',
            'stationDownloaded': True,
            'stationID': '**REDACTED**',
            'stationName': '**REDACTED**',
            'stationSource': '**REDACTED**',
            'timezone': '**REDACTED**',
            'windSensitivity': 0.5,
            'wsDays': 2,
            'zip': None,
          }),
          'system': dict({
            'allowAlexaDiscovery': False,
            'automaticUpdates': True,
            'databasePath': '/rainmachine-app/DB/Default',
            'defaultZoneWateringDuration': 300,
            'hardwareVersion': 3,
            'httpEnabled': True,
            'localValveCount': 12,
            'masterValveAfter': 0,
            'masterValveBefore': 0,
            'maxLEDBrightness': 40,
            'maxWateringCoef': 2,
            'minLEDBrightness': 0,
            'minWateringDurationThreshold': 0,
            'mixerHistorySize': 365,
            'netName': 'Home',
            'parserDataSizeInDays': 6,
            'parserHistorySize': 365,
            'programListShowInactive': True,
            'programSingleSchedule': False,
            'programZonesShowInactive': False,
            'rainSensorIsNormallyClosed': True,
            'rainSensorRainStart': None,
            'rainSensorSnoozeDuration': 0,
            'runParsersBeforePrograms': True,
            'selfTest': False,
            'showRestrictionsOnLed': False,
            'simulatorHistorySize': 0,
            'softwareRainSensorMinQPF': 5,
            'standaloneMode': False,
            'touchAdvanced': False,
            'touchAuthAPSeconds': 60,
            'touchCyclePrograms': True,
            'touchLongPressTimeout': 3,
            'touchProgramToRun': None,
            'touchSleepTimeout': 10,
            'uiUnitsMetric': False,
            'useBonjourService': True,
            'useCommandLineArguments': False,
            'useCorrectionForPast': True,
            'useMasterValve': False,
            'useRainSensor': False,
            'useSoftwareRainSensor': False,
            'vibration': False,
            'waterLogHistorySize': 365,
            'wizardHasRun': True,
            'zoneDuration': list([
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
            ]),
            'zoneListShowInactive': True,
          }),
        }),
        'restrictions.current': dict({
          'freeze': False,
          'hourly': False,
          'month': False,
          'rainDelay': False,
          'rainDelayCounter': -1,
          'rainSensor': False,
          'weekDay': False,
        }),
        'restrictions.universal': dict({
          'freezeProtectEnabled': True,
          'freezeProtectTemp': 2,
          'hotDaysExtraWatering': False,
          'noWaterInMonths': '000000000000',
          'noWaterInWeekDays': '0000000',
          'rainDelayDuration': 0,
          'rainDelayStartTime': 1524854551,
        }),
        'zones': list([
          dict({
            'active': True,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Landscaping',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 4,
            'uid': 1,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': True,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Flower Box',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 5,
            'uid': 2,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'TEST',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 9,
            'uid': 3,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 4',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 4,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 5',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 5,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 6',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 6,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 7',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 7,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 8',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 8,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 9',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 9,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 10',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 10,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 11',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 11,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 12',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 12,
            'userDuration': 0,
            'waterSense': False,
          }),
        ]),
      }),
    }),
    'entry': dict({
      'data': dict({
        'ip_address': '192.168.1.100',
        'password': '**REDACTED**',
        'port': 8080,
        'ssl': True,
      }),
      'disabled_by': None,
      'domain': 'rainmachine',
      'entry_id': '81bd010ed0a63b705f6da8407cb26d4b',
      'minor_version': 1,
      'options': dict({
        'allow_inactive_zones_to_run': False,
        'use_app_run_times': False,
        'zone_run_time': 600,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': 'Mock Title',
      'unique_id': '**REDACTED**',
      'version': 2,
    }),
  })
# ---
# name: test_entry_diagnostics_failed_controller_diagnostics
  dict({
    'data': dict({
      'controller_diagnostics': None,
      'coordinator': dict({
        'api.versions': dict({
          'apiVer': '4.6.1',
          'hwVer': '3',
          'swVer': '4.0.1144',
        }),
        'machine.firmware_update_status': dict({
          'lastUpdateCheck': '2022-07-14 13:01:28',
          'lastUpdateCheckTimestamp': 1657825288,
          'packageDetails': list([
          ]),
          'update': False,
          'updateStatus': 1,
        }),
        'programs': dict({
          '1': dict({
            'active': True,
            'coef': 0,
            'cs_on': False,
            'cycles': 0,
            'delay': 0,
            'delay_on': False,
            'endDate': None,
            'freq_modified': 0,
            'frequency': dict({
              'param': '0',
              'type': 0,
            }),
            'futureField1': 0,
            'ignoreInternetWeather': False,
            'name': 'Morning',
            'nextRun': '2018-06-04',
            'simulationExpired': False,
            'soak': 0,
            'startDate': '2018-04-28',
            'startTime': '06:00',
            'startTimeParams': dict({
              'offsetMinutes': 0,
              'offsetSign': 0,
              'type': 0,
            }),
            'status': 0,
            'uid': 1,
            'useWaterSense': False,
            'wateringTimes': list([
              dict({
                'active': True,
                'duration': 0,
                'id': 1,
                'minRuntimeCoef': 1,
                'name': 'Landscaping',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': True,
                'duration': 0,
                'id': 2,
                'minRuntimeCoef': 1,
                'name': 'Flower Box',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 3,
                'minRuntimeCoef': 1,
                'name': 'TEST',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 4,
                'minRuntimeCoef': 1,
                'name': 'Zone 4',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 5,
                'minRuntimeCoef': 1,
                'name': 'Zone 5',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 6,
                'minRuntimeCoef': 1,
                'name': 'Zone 6',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 7,
                'minRuntimeCoef': 1,
                'name': 'Zone 7',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 8,
                'minRuntimeCoef': 1,
                'name': 'Zone 8',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 9,
                'minRuntimeCoef': 1,
                'name': 'Zone 9',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 10,
                'minRuntimeCoef': 1,
                'name': 'Zone 10',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 11,
                'minRuntimeCoef': 1,
                'name': 'Zone 11',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 12,
                'minRuntimeCoef': 1,
                'name': 'Zone 12',
                'order': -1,
                'userPercentage': 1,
              }),
            ]),
            'yearlyRecurring': True,
          }),
          '2': dict({
            'active': False,
            'coef': 0,
            'cs_on': False,
            'cycles': 0,
            'delay': 0,
            'delay_on': False,
            'endDate': None,
            'freq_modified': 0,
            'frequency': dict({
              'param': '0',
              'type': 0,
            }),
            'futureField1': 0,
            'ignoreInternetWeather': False,
            'name': 'Evening',
            'nextRun': '2018-06-04',
            'simulationExpired': False,
            'soak': 0,
            'startDate': '2018-04-28',
            'startTime': '06:00',
            'startTimeParams': dict({
              'offsetMinutes': 0,
              'offsetSign': 0,
              'type': 0,
            }),
            'status': 0,
            'uid': 2,
            'useWaterSense': False,
            'wateringTimes': list([
              dict({
                'active': True,
                'duration': 0,
                'id': 1,
                'minRuntimeCoef': 1,
                'name': 'Landscaping',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': True,
                'duration': 0,
                'id': 2,
                'minRuntimeCoef': 1,
                'name': 'Flower Box',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 3,
                'minRuntimeCoef': 1,
                'name': 'TEST',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 4,
                'minRuntimeCoef': 1,
                'name': 'Zone 4',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 5,
                'minRuntimeCoef': 1,
                'name': 'Zone 5',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 6,
                'minRuntimeCoef': 1,
                'name': 'Zone 6',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 7,
                'minRuntimeCoef': 1,
                'name': 'Zone 7',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 8,
                'minRuntimeCoef': 1,
                'name': 'Zone 8',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 9,
                'minRuntimeCoef': 1,
                'name': 'Zone 9',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 10,
                'minRuntimeCoef': 1,
                'name': 'Zone 10',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 11,
                'minRuntimeCoef': 1,
                'name': 'Zone 11',
                'order': -1,
                'userPercentage': 1,
              }),
              dict({
                'active': False,
                'duration': 0,
                'id': 12,
                'minRuntimeCoef': 1,
                'name': 'Zone 12',
                'order': -1,
                'userPercentage': 1,
              }),
            ]),
            'yearlyRecurring': True,
          }),
        }),
        'provision.settings': dict({
          'location': dict({
            'address': 'Default',
            'doyDownloaded': True,
            'elevation': '**REDACTED**',
            'et0Average': 6.578,
            'krs': 0.16,
            'latitude': '**REDACTED**',
            'longitude': '**REDACTED**',
            'name': 'Home',
            'rainSensitivity': 0.8,
            'state': 'Default',
            'stationDownloaded': True,
            'stationID': '**REDACTED**',
            'stationName': '**REDACTED**',
            'stationSource': '**REDACTED**',
            'timezone': '**REDACTED**',
            'windSensitivity': 0.5,
            'wsDays': 2,
            'zip': None,
          }),
          'system': dict({
            'allowAlexaDiscovery': False,
            'automaticUpdates': True,
            'databasePath': '/rainmachine-app/DB/Default',
            'defaultZoneWateringDuration': 300,
            'hardwareVersion': 3,
            'httpEnabled': True,
            'localValveCount': 12,
            'masterValveAfter': 0,
            'masterValveBefore': 0,
            'maxLEDBrightness': 40,
            'maxWateringCoef': 2,
            'minLEDBrightness': 0,
            'minWateringDurationThreshold': 0,
            'mixerHistorySize': 365,
            'netName': 'Home',
            'parserDataSizeInDays': 6,
            'parserHistorySize': 365,
            'programListShowInactive': True,
            'programSingleSchedule': False,
            'programZonesShowInactive': False,
            'rainSensorIsNormallyClosed': True,
            'rainSensorRainStart': None,
            'rainSensorSnoozeDuration': 0,
            'runParsersBeforePrograms': True,
            'selfTest': False,
            'showRestrictionsOnLed': False,
            'simulatorHistorySize': 0,
            'softwareRainSensorMinQPF': 5,
            'standaloneMode': False,
            'touchAdvanced': False,
            'touchAuthAPSeconds': 60,
            'touchCyclePrograms': True,
            'touchLongPressTimeout': 3,
            'touchProgramToRun': None,
            'touchSleepTimeout': 10,
            'uiUnitsMetric': False,
            'useBonjourService': True,
            'useCommandLineArguments': False,
            'useCorrectionForPast': True,
            'useMasterValve': False,
            'useRainSensor': False,
            'useSoftwareRainSensor': False,
            'vibration': False,
            'waterLogHistorySize': 365,
            'wizardHasRun': True,
            'zoneDuration': list([
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
              300,
            ]),
            'zoneListShowInactive': True,
          }),
        }),
        'restrictions.current': dict({
          'freeze': False,
          'hourly': False,
          'month': False,
          'rainDelay': False,
          'rainDelayCounter': -1,
          'rainSensor': False,
          'weekDay': False,
        }),
        'restrictions.universal': dict({
          'freezeProtectEnabled': True,
          'freezeProtectTemp': 2,
          'hotDaysExtraWatering': False,
          'noWaterInMonths': '000000000000',
          'noWaterInWeekDays': '0000000',
          'rainDelayDuration': 0,
          'rainDelayStartTime': 1524854551,
        }),
        'zones': list([
          dict({
            'active': True,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Landscaping',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 4,
            'uid': 1,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': True,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Flower Box',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 5,
            'uid': 2,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'TEST',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 9,
            'uid': 3,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 4',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 4,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 5',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 5,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 6',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 6,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 7',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 7,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 8',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 8,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 9',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 9,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 10',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 10,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 11',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 11,
            'userDuration': 0,
            'waterSense': False,
          }),
          dict({
            'active': False,
            'cycle': 0,
            'machineDuration': 0,
            'master': False,
            'name': 'Zone 12',
            'noOfCycles': 0,
            'remaining': 0,
            'restriction': False,
            'state': 0,
            'type': 2,
            'uid': 12,
            'userDuration': 0,
            'waterSense': False,
          }),
        ]),
      }),
    }),
    'entry': dict({
      'data': dict({
        'ip_address': '192.168.1.100',
        'password': '**REDACTED**',
        'port': 8080,
        'ssl': True,
      }),
      'disabled_by': None,
      'domain': 'rainmachine',
      'entry_id': '81bd010ed0a63b705f6da8407cb26d4b',
      'minor_version': 1,
      'options': dict({
        'allow_inactive_zones_to_run': False,
        'use_app_run_times': False,
        'zone_run_time': 600,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': 'Mock Title',
      'unique_id': '**REDACTED**',
      'version': 2,
    }),
  })
# ---
